/*
 * $Id: ChangeLog,v 1.1824 2003/12/05 05:25:55 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-05 03:30 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/rtl/gtnul/gtnul.c
    + Added GTNUL startup routine for Borland (not multiGT)
  * makefile.bc
    + Compile gtnul with Borland

2003-12-05 06:30 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/hvm.c
  * source/vm/thread.c
    ! fixes on the last commits

2003-12-04 20:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/direct.c
  * source/vm/thread.c
    * MSVC compliation.

  * source/rtl/win32ole.prg
    * Added E_NOTIMPL to list of literal errors.

  * tests/pp.prg
  * tests/pp_harb.ch
    * Few Error management and GenDynProcedures refinments.

2003-12-05 05:15 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/fm.c
  * source/vm/estack.c
  * source/vm/hvm.c
  * source/vm/thread.c
    ! initialiation of thread and stack is now the same under ST and MT;
      this gives way for optimization of memory control management.

2003-12-05 02:37 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/fm.c
    * Under windows, LocalAlloc & c are used instead of malloc & c
      Plz. test under non-windows-aware compilers. It should work also in
      mingw and family, anyhow.

  * source/vm/memvars.c
    * removed a misleading comment

  * bin/bld.bat
    ! after compiling under MT, was not resetting bcc flags to ST.

2003-12-04 18:55 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/direct.c
    * DIRECTORY now respects _SET_{FILE|DIR}CASE flags

2003-12-04 14:37 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/thread.c
  * bin/bld.bat
  * makefile.bc